force-app/main/default/objects/Account/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Agent associated with the account</description>
    <label>Agent</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Agent</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Agent)</relationshipLabel>
    <relationshipName>Agent_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>