force-app/main/default/objects/Account/fields/Corp_Id__c.field-meta.xml
<CustomField>
    <fullName>Corp_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Corp Id</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>