force-app/main/default/objects/Account/fields/Group_Level__c.field-meta.xml
<CustomField>
    <fullName>Group_Level__c</fullName>
    <formula>IF (Corp_Id__c &lt;&gt; &quot;&quot;,&quot;Corp&quot;,IF(AND(Corp_Id__c = &quot;&quot;,PG_Corp_ID__c &lt;&gt; &quot;&quot;),&quot;Group&quot;,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Level</label>
    <type>Text</type>
</CustomField>