force-app/main/default/objects/Account/fields/PG_Corp_ID__c.field-meta.xml
<CustomField>
    <fullName>PG_Corp_ID__c</fullName>
    <externalId>true</externalId>
    <label>PG Corp ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>