force-app/main/default/objects/Account/fields/Quartz_License__c.field-meta.xml
<CustomField>
    <fullName>Quartz_License__c</fullName>
    <label>Quartz License</label>
    <length>10</length>
    <type>Text</type>
</CustomField>