force-app/main/default/objects/Account/recordTypes/Member.recordType-meta.xml
<RecordType>
    <fullName>Member</fullName>
    <active>true</active>
    <label>Member</label>
</RecordType>